--- a/content/apps/api/languages/zh_TW/api.po
+++ b/content/apps/api/languages/zh_TW/api.po
@@ -5,17 +5,16 @@ msgstr ""
 "Project-Id-Version: Ecjia App api 2.27.4\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/"
 "polyglots/\n"
-"POT-Creation-Date: 2019-02-21 "
-"07:19:46+00:00\n"
+"POT-Creation-Date: 2019-04-03 15:06+0800\n"
+"PO-Revision-Date: 2019-04-03 15:06+0800\n"
+"Last-Translator: \n"
+"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-03-06 17:24+0800\n"
-"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
 "X-Generator: Poedit 1.8.7\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: zh_TW\n"
 
 #: classes/Requests/Actions/RemoteAction.php:93
 msgid "Const [serverHost] url not defined."
@@ -31,24 +30,22 @@ msgstr "API接口"
 
 #: configs/package.php:56
 msgid ""
-"具备分享、标准、去中心化、开放、模块化、并集"
-"成ECJIA、耦合移动应用、第三方应用的ECJIA "
-"API；在ECJIA API的设计模式上，使用具有极强灵"
-"活性的ECJIA框架打造指松耦合或紧耦合应用程序间"
-"的小型格式化信息，是ECJIA整个产品中系统、应用"
-"整合不可缺少的一部分，同时也为更多开发者提供"
-"接口标准供其使用开发；通过程序间的直接通信实"
-"现数据共享在为系统自身、第三方使用者带来价值"
-"的同时，更希望通过开放的API来让ECJIA提供的服"
-"务拥有更大的用户群和服务访问数量。"
+"具备分享、标准、去中心化、开放、模块化、并集成"
+"ECJIA、耦合移动应用、第三方应用的ECJIA API；在"
+"ECJIA API的设计模式上，使用具有极强灵活性的ECJIA框"
+"架打造指松耦合或紧耦合应用程序间的小型格式化信息，"
+"是ECJIA整个产品中系统、应用整合不可缺少的一部分，"
+"同时也为更多开发者提供接口标准供其使用开发；通过程"
+"序间的直接通信实现数据共享在为系统自身、第三方使用"
+"者带来价值的同时，更希望通过开放的API来让ECJIA提供"
+"的服务拥有更大的用户群和服务访问数量。"
 msgstr ""
-"具備分享、標準、去中心化、開放、模塊化、並集"
-"成ECJIA、耦合移動應用、第三方應用的ECJIA "
-"API；在ECJIA API的設計模式上，使用具有極強靈"
-"活性的ECJIA框架打造指松耦合或緊耦合應用程序間"
-"的小型格式化信息，是ECJIA整個產品中系統、應用"
-"整合不可缺少的一部分，同時也為更多開發者提供"
-"接口標準供其使用開發；通過程序間的直接通信實"
-"現數據共享在為系統自身、第三方使用者帶來價值"
-"的同時，更希望通過開放的API來讓ECJIA提供的服"
-"務擁有更大的用戶群和服務訪問數量。"
+"具備分享、標準、去中心化、開放、模塊化、並集成"
+"ECJIA、耦合移動應用、第三方應用的ECJIA API；在"
+"ECJIA API的設計模式上，使用具有極強靈活性的ECJIA框"
+"架打造指松耦合或緊耦合應用程序間的小型格式化信息，"
+"是ECJIA整個產品中系統、應用整合不可缺少的一部分，"
+"同時也為更多開發者提供接口標準供其使用開發；通過程"
+"序間的直接通信實現數據共享在為系統自身、第三方使用"
+"者帶來價值的同時，更希望通過開放的API來讓ECJIA提供"
+"的服務擁有更大的用戶群和服務訪問數量。"
