--- a/content/apps/finance/languages/zh_TW/finance.po
+++ b/content/apps/finance/languages/zh_TW/finance.po
@@ -4,16 +4,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ecjia App finance 1.27.4\n"
 "Report-Msgid-Bugs-To: https://make.ecjia.com/polyglots/\n"
-"POT-Creation-Date: 2019-03-06 09:04:37+00:00\n"
+"POT-Creation-Date: 2019-04-03 15:37+0800\n"
+"PO-Revision-Date: 2019-04-08 16:45+0800\n"
+"Last-Translator: \n"
+"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2019-03-08 16:42+0800\n"
-"Language-Team: LANGUAGE <ecjia@ecjia.com>\n"
 "X-Generator: Poedit 2.2\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"Language: zh_TW\n"
 
 #: admin_account.php:86 admin_account.php:97 admin_account.php:99
 #: admin_account.php:128 admin_account.php:430
@@ -339,19 +339,55 @@ msgstr "用戶余額"
 msgid "订单支付成功！"
 msgstr "訂單支付成功！"
 
-#: classes/UserCleanHandlers/UserAccountLogClear.php:98
-#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:98
-#: classes/UserCleanHandlers/UserMoneyClear.php:104
-#: classes/UserCleanHandlers/UserTradingRecordClear.php:98
+#: classes/UserCleanHandlers/UserAccountLogClear.php:34
+msgid "会员积分记录"
+msgstr "會員積分記錄"
+
+#: classes/UserCleanHandlers/UserAccountLogClear.php:46
+msgid "账户积分所有的变动记录"
+msgstr "賬戶積分所有的變動記錄"
+
+#: classes/UserCleanHandlers/UserAccountLogClear.php:101
+#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:101
+#: classes/UserCleanHandlers/UserMoneyClear.php:109
+#: classes/UserCleanHandlers/UserTradingRecordClear.php:101
 msgid "用户名是%s"
 msgstr "用戶名是%s"
 
-#: classes/UserCleanHandlers/UserAccountLogClear.php:98
-#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:98
-#: classes/UserCleanHandlers/UserMoneyClear.php:104
-#: classes/UserCleanHandlers/UserTradingRecordClear.php:98
+#: classes/UserCleanHandlers/UserAccountLogClear.php:101
+#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:101
+#: classes/UserCleanHandlers/UserMoneyClear.php:109
+#: classes/UserCleanHandlers/UserTradingRecordClear.php:101
 msgid "用户ID是%s"
 msgstr "用戶ID是%s"
+
+#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:34
+msgid "账户发票记录"
+msgstr "賬戶發票記錄"
+
+#: classes/UserCleanHandlers/UserFinanceInvoiceClear.php:46
+msgid "账号添加的发票信息"
+msgstr "賬號添加的發票信息"
+
+#: classes/UserCleanHandlers/UserMoneyClear.php:34
+msgid "账户余额"
+msgstr "賬戶餘額"
+
+#: classes/UserCleanHandlers/UserMoneyClear.php:50
+msgid "账户内可用余额<span class=\"ecjiafc-red ecjiaf-fs3\">%s</span>"
+msgstr "賬戶內可用餘額<span class=\"ecjiafc-red ecjiaf-fs3\">%s</span>"
+
+#: classes/UserCleanHandlers/UserMoneyClear.php:52
+msgid "查看全部>>>"
+msgstr "查看全部>>>"
+
+#: classes/UserCleanHandlers/UserTradingRecordClear.php:34
+msgid "用户充值/提现记录"
+msgstr "用戶充值/提現記錄"
+
+#: classes/UserCleanHandlers/UserTradingRecordClear.php:46
+msgid "账户充值、提现有关的所有记录"
+msgstr "賬戶充值、提現有關的所有記錄"
 
 #: configs/jslang.php:51 configs/jslang.php:59
 msgid "开始时间不能大于或等于结束时间"
@@ -399,7 +435,7 @@ msgstr "消費"
 
 #: configs/jslang.php:69
 msgid "退款"
-msgstr "消費"
+msgstr "退款"
 
 #: configs/jslang.php:71
 msgid "冻结"
